--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                <label>Site Name</label>
                <input  type="text" class="form-control" id="siteName" placeholder="Website Name"/>
            </div>
-           <div class="form-group">
+           <div class="form-group margin--top">
             <label>Site URL</label>
             <input  type="text" class="form-control" id="siteUrl" placeholder="Website URL"/>
         </div>
@@ -49,7 +49,7 @@
       </div>
 
       <footer class="footer">
-        <p>&copy; 2020 BookMaker.</p>
+        <p>&copy; 2020 Adegbite.io.</p>
       </footer>
 
     </div> <!-- /container -->
